--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,18 @@
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <title>Express</title>
-        <link rel="stylesheet" href="/stylesheets/global.css" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="A simple web scraper for the timetable of the school I go to." />
+        <link rel="stylesheet" href="/style/global.css" />
     </head>
-
     <body>
-        <h1>Express</h1>
-        <p>Welcome to Express</p>
+        <p style="padding: 50px">
+            This is a simple web scraper for the timetable of the school I go to. The API is available at
+            <a href="/api/">/api</a>. You can also specify a date in the format DD.MM.YYYY to get the timetable at a
+            specific date. <br />
+            For example, <a href="/api/8.9.2024">/api/8.9.2024</a> will give you the timetable of that week scraped on
+            the 8th of September 2024.
+        </p>
     </body>
 </html>
